nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_by_target__doesnt_error_for_internal_task_when_implicit.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(common)" ]
    3 [ label="SyncSystemProject(base)" ]
    4 [ label="RunTask(common:internal)" ]
    1 -> 0 [ ]
    3 -> 1 [ ]
    2 -> 1 [ ]
    2 -> 3 [ ]
    4 -> 2 [ ]
}
