nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_by_target__runs_all.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(base)" ]
    3 [ label="RunTask(base:build)" ]
    4 [ label="SyncSystemProject(server)" ]
    5 [ label="RunTask(server:build)" ]
    6 [ label="SyncSystemProject(common)" ]
    7 [ label="RunTask(common:build)" ]
    8 [ label="SyncSystemProject(client)" ]
    9 [ label="RunTask(client:build)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 1 [ ]
    5 -> 4 [ ]
    6 -> 1 [ ]
    6 -> 2 [ ]
    7 -> 6 [ ]
    8 -> 1 [ ]
    8 -> 4 [ ]
    8 -> 6 [ ]
    9 -> 8 [ ]
    9 -> 7 [ ]
    9 -> 5 [ ]
}

